#3 - Add some content and image to the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 	<title>Myka Pilpa &middot; Web Developer Portfolio</title>
 </head>
 <body>
-	<h1>Myka Pilpa &middot; Web Developer Portfolio</h1>
-
+	<div class="container">
+		<section id="landing">
+			<h1>Myka Pilpa</h1>
+			<h2>Full Stack Developer</h2>
+			<p>I am an anime lover. I love watching kdramas as well. I also love EXO hihi.</p>
+			<img src="./images/ME.jpg" alt="My profile image.">
+		</section>	
+		<section id="gallery"></section>	
+	</div>
 </body>
 </html>
