--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 			<p>I am an anime lover. I love watching kdramas as well. I also love EXO hihi.</p>
 			<img src="./images/ME.jpg" alt="My profile image.">
 		</section>	
-		<section id="gallery"></section>	
+		<section id="gallery"></section>
+		<div class="tools"></div>
+		<h1>Languages I Speak</h1>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+		</ul>
+		<h1>Tools I use</h1>	
+		<ul>
+			<li>Git Bash</li>
+			<li>Sublime Text / VS Code</li>
+			<li>Github / Github Pages</li>
+			<li>Google Chrome</li>
 	</div>
 </body>
 </html>
