--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
 	<title>Myka Pilpa &middot; Web Developer Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+
 </head>
+
 <body>
+
 	<div class="container">
+
 		<section id="landing">
+
 			<h1>Myka Pilpa</h1>
+
 			<h2>Full Stack Developer</h2>
+
 			<p>I am an anime lover. I love watching kdramas as well. I also love EXO hihi.</p>
+
 			<img src="./images/ME.jpg" alt="My profile image.">
+
 		</section>	
+
 		<section id="gallery"></section>
+
 		<div class="tools"></div>
-		<h1>Languages I Speak</h1>
+
+		<h2>Languages I Speak</h2>
+
 		<ul>
 			<li>HTML</li>
 			<li>CSS</li>
 		</ul>
-		<h1>Tools I use</h1>	
+		<h2>Tools I use</h2>	
 		<ul>
 			<li>Git Bash</li>
 			<li>Sublime Text / VS Code</li>
